--- a/templates/second_task/class_template.html
+++ b/templates/second_task/class_template.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-    Это шаблон для функционального представления
+    Это шаблон для классового представления
 </body>
 </html>
