--- a/templates/third_task/sample1.html
+++ b/templates/third_task/sample1.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Главная страница</h1>
 <p><a href="#">Главная</a></p>
-<p><a href="http://127.0.0.1:8000/games">Магазин</a></p>
-<p><a href="http://127.0.0.1:8000/cart">Корзина</a></p>
+<p><a href="http://127.0.0.1:8000/based/shop">Магазин</a></p>
+<p><a href="http://127.0.0.1:8000/based/basket">Корзина</a></p>
 </body>
 </html>
