--- a/templates/fourth_task/menu.html
+++ b/templates/fourth_task/menu.html
@@ -11,9 +11,9 @@
     </header>
     <nav>
         {% block menu %}
-        <p><a href="http://127.0.0.1:8000">Главная</a></p>
-        <p><a href="http://127.0.0.1:8000/games">Магазин</a></p>
-        <p><a href="http://127.0.0.1:8000/cart">Корзина</a></p>
+        <p><a href="http://127.0.0.1:8000/based">Главная</a></p>
+        <p><a href="http://127.0.0.1:8000/based/shop">Магазин</a></p>
+        <p><a href="http://127.0.0.1:8000/based/basket">Корзина</a></p>
         {% endblock %}
     </nav>
 
